# Chimera-Efficiently-Training-Large-Scale-Neural-Networks-with-Bidirectional-Pipelines

./: .gitignore  README.md  demo_model.py  pyproject.toml  requirements.txt
NHPC_proj/: chimera_playground.py  demo_performance.py  demo_schedule.py  test_edge_cases_and_correctness.py  test_paper_implementation_complete.py
NHPC_proj/chimera/config/: __init__.py  autotune.py
NHPC_proj/chimera/engine/: __init__.py  partition.py  recompute.py  runtime.py  schedule.py
NHPC_proj/chimera/models/: __init__.py  bert48.py  gpt2_64.py
NHPC_proj/chimera/runners/: __init__.py  benchmarks.py
NHPC_proj/tests/: run_all_tests.py  run_validation.py  test_integration_complete.py  test_person_a_implementation.py
chimera/: __init__.py
chimera/config/: perf_model.py
chimera/runners/: train.py
docs/: README.md  plan.txt
examples/: demo_schedule.py
scripts/: chimera_playground.py
tests/: run_all_tests.py  test_person_b_implementation.py
